Profile: Fix bio overflow (#1688)

--- a/src/components/ui/ListItem.scss
+++ b/src/components/ui/ListItem.scss
@@ -364,7 +364,6 @@
       line-height: 1.25rem;
       overflow: hidden;
       text-overflow: ellipsis;
-      white-space: nowrap;
     }
 
     .subtitle {
